--- a/src/style/Sidebar.css
+++ b/src/style/Sidebar.css
@@ -92,17 +92,18 @@ padding-top: 10px;
     width: 70px;
     height: 70px;
     padding-top: 120px;
-    margin-left: 100px;
+    margin-left: 150px;
 }
 .upgradebtn
 {
     background-color: rgb(84, 221, 118);
     font-size: large;
     border: none;
-    margin-left:70px;
+    margin-left:10px;
     width: 150px;
     height: 40px;
     color: white;
+    margin-top: 300px;
    
 }
 .search
@@ -114,7 +115,8 @@ padding-top: 10px;
 .imgname
 {
     display: flex;
-    margin-left: 690px;
+    margin-left: 850px;
+    margin-top: 10px;
 
 }
 .project
@@ -172,7 +174,7 @@ padding-top: 10px;
 .createbtn
 {
     display: flex;
-    margin-left: 870px;
+    margin-left: 1030px;
     height: 25px;
    
     
@@ -248,10 +250,12 @@ padding-top: 10px;
 {
     margin-bottom: 135px; 
     color: rgb(129, 118, 118);
+
 }
 .pp
 {
     display: flex;
+   margin-left: -170px;
 }
 .teams
 {
@@ -299,5 +303,179 @@ padding-top: 10px;
     display: flex;
     margin-top: 80px;
     margin-right: 60px;
+    margin-left: -79px;
+    
   
 }
+.about,.google,.enter,.command,.fiddle,.mind
+{
+ width: 35px;
+ height: 35px;
+}
+.io
+{
+  
+    justify-content:space-between;
+    display: flex;
+    
+}
+.about
+{
+    margin-right: 10px;
+}
+.google
+{
+display: flex;
+margin-right: 10px;
+}
+.enter
+{
+    margin-right: 10px;
+}
+.iconsone
+{
+    display: flex;
+    margin-top: 40px;
+    margin-right: -290px;
+    
+   
+}
+.iconstwo
+{
+    display: flex;
+    margin-top: 40px;
+    margin-right: 40px;
+margin-left: 40px;
+    
+}
+.mind
+
+{
+   margin-left: 80px;
+}
+.fiddle
+{
+    margin-left: -120px;
+}
+.icons5
+{
+    display: flex;
+    margin-top: 170px;
+    margin-left: -70px;
+
+}
+
+.square ,.dollar ,.settingsline ,.slash ,.bulb
+{
+    width: 30px;
+    height: 30px;
+   
+}
+.square 
+{
+    margin: 5px;
+    color:rgb(66, 218, 66);
+}
+.dollar
+{
+  margin: 5px;
+  color: rgb(56, 45, 107);
+}
+.settingsline
+{
+    margin: 5px;  
+    color: rgb(187, 117, 12);
+}
+.slash
+{
+    margin: 5px;  
+    color: skyblue;
+}
+.bulb
+{
+    margin: 5px;  
+    margin-top: 45px;
+    margin-left: -155px;
+    color: palevioletred;
+}
+.viewscreen,.viewone,.viewtwo
+{
+    display: flex;
+}
+.viewscreen
+{
+    margin-left: 100px;
+}
+.viewtwo{
+    margin-left: 820px;
+}
+.view
+{
+    color:rgb(150, 141, 141);
+}
+.clip
+{
+    margin-left: 10px;
+}
+.board
+{
+    margin-left: 10px;
+}
+.searchicon
+{
+    color:rgb(168, 166, 166);
+    margin-top: 2px;
+}
+.srch
+{
+border: none;
+font-size: 1rem;
+}
+.filtericon
+{
+  margin-left: -90px; 
+  width: 22px;
+  height: 22px;
+  color:rgb(168, 166, 166);
+}
+.filter
+{
+    margin-left: -65px;
+    color:rgb(168, 166, 166);
+}
+.sorticon
+{
+    margin-left: 20px;
+    margin-top: 2px;
+    width: 20px;
+    height: 20px;
+    color:rgb(168, 166, 166);
+}
+.sort
+{
+    color:rgb(168, 166, 166); 
+    margin-left: 2px;
+}
+.headproj16
+{
+   margin-left: 20px;
+   margin-top: 20px;
+  
+}
+.clients{
+    margin-left: 30px;
+    margin-top: -35px;
+}
+.numteam
+{
+    margin-bottom: -130px;
+    margin-top: 100px;
+}
+.teams
+{
+    margin-bottom: 50px;
+    margin-right: -10px;
+   
+}
+
+
